# Signals

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.md  annotated.html  annotated_dup.js  classes.html  classsig_1_1Connection-members.html  classsig_1_1Connection.html  classsig_1_1Connection.js  classsig_1_1Connection__impl.html  classsig_1_1Connection__impl_3_01R_07Args_8_8_8_08_4-members.html  classsig_1_1Connection__impl_3_01R_07Args_8_8_8_08_4.html  classsig_1_1Connection__impl_3_01R_07Args_8_8_8_08_4.js  classsig_1_1Connection__impl_3_01Ret_07Args_8_8_8_08_4-members.html  classsig_1_1Connection__impl_3_01Ret_07Args_8_8_8_08_4.html  classsig_1_1Connection__impl_3_01Ret_07Args_8_8_8_08_4.js  classsig_1_1Connection__impl__base-members.html  classsig_1_1Connection__impl__base.html  classsig_1_1Connection__impl__base.js  classsig_1_1Expired__slot-members.html  classsig_1_1Expired__slot.html  classsig_1_1Expired__slot.js  classsig_1_1Function__type__splitter.html  classsig_1_1Function__type__splitter_3_01R_07Args_8_8_8_08_4-members.html  classsig_1_1Function__type__splitter_3_01R_07Args_8_8_8_08_4.html  classsig_1_1Function__type__splitter_3_01R_07Args_8_8_8_08_4.js  classsig_1_1Function__type__splitter_3_01Ret_07Args_8_8_8_08_4-members.html  classsig_1_1Function__type__splitter_3_01Ret_07Args_8_8_8_08_4.html  classsig_1_1Function__type__splitter_3_01Ret_07Args_8_8_8_08_4.js  classsig_1_1Optional__last__value-members.html  classsig_1_1Optional__last__value.html  classsig_1_1Optional__last__value.js  classsig_1_1Optional__last__value_3_01void_01_4-members.html  classsig_1_1Optional__last__value_3_01void_01_4.html  classsig_1_1Optional__last__value_3_01void_01_4.js  classsig_1_1Shared__connection__block-members.html  classsig_1_1Shared__connection__block.html  (+93 more)
.github/workflows/: build.yml
doc/: Doxyfile
docs/: Doxyfile  mainpage.dox
include/: connection.hpp  expired_slot.hpp  optional_last_value.hpp  position.hpp  shared_connection_block.hpp  signal.hpp  signal_fwd.hpp  signals.hpp  slot.hpp  slot_base.hpp  slot_fwd.hpp
include/detail/: connection_impl.hpp  connection_impl_base.hpp  function_type_splitter.hpp  placeholder_template.hpp  signal_impl.hpp  slot_iterator.hpp
include/signals/: connection.hpp  expired_slot.hpp  optional_last_value.hpp  position.hpp  shared_connection_block.hpp  signal.hpp  signal_fwd.hpp  signals.hpp  slot.hpp  slot_base.hpp  slot_fwd.hpp
include/signals/detail/: connection_impl.hpp  connection_impl_base.hpp  function_type_splitter.hpp  signal_impl.hpp  slot_iterator.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+8 more)
src/: connection.cpp  shared_connection_block.cpp  slot_base.cpp
test/: CMakeLists.txt  connection_impl_test.cpp  connection_test.cpp  optional_last_value_test.cpp  shared_connection_block_test.cpp  signal_impl_test.cpp  signal_test.cpp  slot_base_test.cpp  slot_test.cpp
tests/: CMakeLists.txt  connection.test.cpp  connection_impl.test.cpp  optional_last_value.test.cpp  shared_connection_block.test.cpp  signal.test.cpp  signal_impl.test.cpp  slot.test.cpp  slot_base.test.cpp
